--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -19,11 +19,14 @@ android {
     }
 }
 buildscript {
-    repositories {
-        mavenCentral()
-    }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0+'
+    }
+}
+allprojects {
+    repositories {
+        jcenter() //注：repository 1
+        mavenCentral()  //注：repository 2
     }
 }
 dependencies {
@@ -31,4 +34,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile files('libs/universal-image-loader-1.9.2-with-sources.jar')
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okio:okio:1.5.0'
+    compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
