--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.squareup.okio:okio:1.5.0'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.android.support:recyclerview-v7:21.0.+' exclude module: 'support-v4'
+    compile 'com.android.support:cardview-v7:21.0.+' exclude module: 'support-v4'
 }
