--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support:recyclerview-v7:21.0.+' exclude module: 'support-v4'
     compile 'com.android.support:cardview-v7:21.0.+' exclude module: 'support-v4'
+    compile 'com.github.traex.rippleeffect:library:1.3'
 }
