--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+' exclude module: 'support-v4'
     compile 'com.android.support:cardview-v7:21.0.+' exclude module: 'support-v4'
     compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
