--- a/myapplication/src/main/AndroidManifest.xml
+++ b/myapplication/src/main/AndroidManifest.xml
@@ -48,11 +48,11 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE."/>
 
     <application
-        android:screenOrientation="portrait"
         android:name=".contex.ApplicationData"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -67,8 +67,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
-            android:name=".activity.AppealActivity">
+            android:name=".activity.AppealActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activity.CountActivity">
         </activity>
     </application>
 
