--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -38,9 +38,10 @@ dependencies {
     compile 'com.squareup.okio:okio:1.5.0'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.android.support:recyclerview-v7:21.0.+' exclude module: 'support-v4'
-    compile 'com.android.support:cardview-v7:21.0.+' exclude module: 'support-v4'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.github.mmin18.layoutcast:library:1.+@aar'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
