--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.github.mmin18.layoutcast:library:1.+@aar'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'io.reactivex:rxandroid:1.0.1'
+// Because RxAndroid releases are few and far between, it is recommended you also
+// explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile 'io.reactivex:rxjava:1.0.15'
 }
