--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -34,8 +34,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile files('libs/universal-image-loader-1.9.2-with-sources.jar')
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.okio:okio:1.5.0'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.okio:okio:1.5.0+'
+    testCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support:recyclerview-v7:23.1.0'
@@ -50,4 +51,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.15'
     compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') exclude module: 'support-v4'
     compile 'com.commit451:PhotoView:1.2.4'
+    compile 'com.jiechic.library:xUtils:2.6.14'
 }
