增加详情页滑动返回效果

--- a/myapplication/src/main/AndroidManifest.xml
+++ b/myapplication/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
+            android:theme="@style/JK.SwipeBack.Transparent.Theme"
             android:name=".activity.CountActivity">
         </activity>
         <activity
