--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') exclude module: 'support-v4'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.jiechic.library:xUtils:2.6.14'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 }
