--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -17,7 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
+
 buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0+'
@@ -46,12 +52,14 @@ dependencies {
     compile 'com.github.mmin18.layoutcast:library:1.+@aar'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'io.reactivex:rxandroid:1.0.1'
-// Because RxAndroid releases are few and far between, it is recommended you also
-// explicitly depend on RxJava's latest version for bug fixes and new features.
+    // Because RxAndroid releases are few and far between, it is recommended you also
+
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.0.15'
     compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') exclude module: 'support-v4'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.jiechic.library:xUtils:2.6.14'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+    compile files('libs/BaiduLBS_Android.jar')
 }
