--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -37,29 +37,28 @@ allprojects {
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/universal-image-loader-1.9.2-with-sources.jar')
+    testCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
+    compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') exclude module: 'support-v4'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+    compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
-    compile files('libs/universal-image-loader-1.9.2-with-sources.jar')
     compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'com.squareup.okio:okio:1.5.0+'
-    testCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
+    compile 'com.squareup.okio:okio:1.5.0'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support:recyclerview-v7:23.1.0'
-    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.github.mmin18.layoutcast:library:1.+@aar'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'io.reactivex:rxandroid:1.0.1'
-    // Because RxAndroid releases are few and far between, it is recommended you also
-
-    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.0.15'
-    compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') exclude module: 'support-v4'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.jiechic.library:xUtils:2.6.14'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    compile files('libs/BaiduLBS_Android.jar')
+    compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.android.support:support-v4:22.2.1'
 }
