增加天气的获取

--- a/myapplication/src/main/AndroidManifest.xml
+++ b/myapplication/src/main/AndroidManifest.xml
@@ -92,6 +92,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@style/JK.SwipeBack.Transparent.Theme"
             android:name=".activity.AppealActivity"
             android:screenOrientation="portrait">
         </activity>
