--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     compile 'com.jiechic.library:xUtils:2.6.14'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
 }
