--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 21 10:52:29 CST 2015
-sdk.dir=D\:\\Users\\liujingyuan\\AppData\\Local\\Android\\sdk
+#Tue Nov 24 22:04:27 CST 2015
+sdk.dir=D\:\\AndroidSdk
