--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -36,6 +36,7 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 dependencies {
@@ -67,4 +68,6 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
+    compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
+
 }
