--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     compile files('libs/BaiduLBS_Android.jar')
-
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
@@ -69,4 +68,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
+    compile files('libs/baidumap.jar')
 }
