--- a/myapplication/src/main/AndroidManifest.xml
+++ b/myapplication/src/main/AndroidManifest.xml
@@ -71,21 +71,15 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
-
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
     <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT"/>
-
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
     <uses-permission android:name="com.android.launcher.permission.WRITE_SETTINGS"/>
-
     <uses-permission android:name="com.android.launcher2.permission.READ_SETTINGS"/>
     <uses-permission android:name="com.android.launcher2.permission.WRITE_SETTINGS"/>
-
     <uses-permission android:name="com.android.launcher3.permission.READ_SETTINGS"/>
     <uses-permission android:name="com.android.launcher3.permission.WRITE_SETTINGS"/>
-
     <uses-permission android:name="org.adw.launcher.permission.READ_SETTINGS"/>
     <uses-permission android:name="org.adw.launcher.permission.WRITE_SETTINGS"/>
     <uses-permission android:name="com.htc.launcher.permission.READ_SETTINGS"/>
@@ -125,6 +119,7 @@
     <uses-permission android:name="telecom.mdesk.permission.READ_SETTINGS"/>
     <uses-permission android:name="telecom.mdesk.permission.WRITE_SETTINGS"/>
     <uses-permission android:name="dianxin.permission.ACCESS_LAUNCHER_DATA"/>
+    <uses-permission android:name="android.hardware.sensor.accelerometer"/>
     <application
         android:name=".contex.ApplicationData"
         android:allowBackup="true"
@@ -147,9 +142,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/JK.SwipeBack.Transparent.Theme"
             android:name=".ui.activity.AppealActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/JK.SwipeBack.Transparent.Theme">
         </activity>
         <activity
             android:name=".ui.activity.CountActivity"
@@ -206,6 +201,11 @@
             android:name=".ui.activity.WeatherActivity"
             android:label="@string/title_activity_weather"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".ui.activity.BaiduMapActivity"
+            android:label="@string/title_activity_baidu_map"
+            android:theme="@style/JK.SwipeBack.Transparent.Theme">
         </activity>
     </application>
 
