commit Material Dialogs

--- a/myapplication/build.gradle
+++ b/myapplication/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
     compile files('libs/baidumap.jar')
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
+        transitive = false
+    }
 }
